--- a/index.html
+++ b/index.html
@@ -130,8 +130,12 @@
                <h1>네이버 블로그 크롤러</h1>
                <div class="form-group">
                     <label for="keyword">검색 키워드</label>
-                    <input type="text" id="keyword" placeholder="검색할 키워드를
-                    입력하세요" oninput="validateForm()"
+                    <input
+                         type="text"
+                         id="keyword"
+                         placeholder="검색할 키워드(기업명)를 입력하세요"
+                         oninput="validateForm()"
+                    />
                </div>
                <div class="form-group">
                     <label for="startDate">검색 시작일</label>
